add environment variables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,13 @@
 version: "3"
 services:
-  kgtk-similarity:
+  wikidata-wikifier:
     image: wikidata-wikifier
     container_name: wikidata-wikifier
     command: sh -c 'python3 wikifier_service.py'
     restart: always
     ports:
       - "1703:1703"
+    environment:
+      - WIKIFIER_ES_URL=http://localhost:9200
+      - WIKIFIER_ES_INDEX=wikidatadwd-augmented-01
+      - WIKIFIER_MODEL_PATH=/api/wikidata-wikifier/wikifier/model/rf_tuned_ranking.pkl # path in the docker container
