--- a/wikifier/config.json
+++ b/wikifier/config.json
@@ -2,6 +2,8 @@
   "es_url": "http://ckg07:9200",
   "augmented_dwd_index": "wikidatadwd-augmented",
   "pickled_model_path": "/Users/amandeep/Github/table-linker-pipelines/table-linker-full-pipeline/rf_tuned_ranking.pkl",
+  "model_path": "/Users/amandeep/Github/wikidata-wikifier/wikifier/model/model_loss_0.10179922729730606_top1_0.905367231638418.pth",
+  "min_max_scaler_path": "/Users/amandeep/Github/wikidata-wikifier/wikifier/model/normalization_factor_dwd_v2_tfidf.pkl",
   "host": "0.0.0.0",
   "port": "1703"
 }
