--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
 flask
 git+https://github.com/usc-isi-i2/rltk.git@master#egg=rltk
 git+https://github.com/usc-isi-i2/table-linker.git@development#egg=table-linker
+torch
