--- a/wikifier/config.json
+++ b/wikifier/config.json
@@ -1,9 +1,9 @@
 {
   "es_url": "http://ckg07:9200",
   "augmented_dwd_index": "wikidatadwd-augmented",
-  "pickled_model_path": "/Users/amandeep/Github/table-linker-pipelines/table-linker-full-pipeline/rf_tuned_ranking.pkl",
-  "model_path": "/Users/amandeep/Github/wikidata-wikifier/wikifier/model/model_loss_0.10179922729730606_top1_0.905367231638418.pth",
-  "min_max_scaler_path": "/Users/amandeep/Github/wikidata-wikifier/wikifier/model/normalization_factor_dwd_v2_tfidf.pkl",
+  "classifier_model_path": "/Users/amandeep/Github/wikidata-wikifier/wikifier/model/weighted_lr.pkl",
+  "model_path": "/Users/amandeep/Github/wikidata-wikifier/wikifier/model/epoch_2_loss_0.09150885790586472_top1_0.9067796610169492.pth",
+  "min_max_scaler_path": "/Users/amandeep/Github/wikidata-wikifier/wikifier/model/normalization_factor.pkl",
   "host": "0.0.0.0",
   "port": "1703"
 }
